--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -37,7 +37,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:text="@string/title_placeholder"
         android:padding="8dp"
-        style="@style/TextAppearance.AppCompat.Headline"/>
+        style="@style/SportsTitle"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
         android:id="@+id/newsTitle"
         android:text="@string/news_placeholder"
         android:padding="8dp"
-        style="@style/TextAppearance.AppCompat.Subhead" />
+        style="@style/SportsDetailText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
         android:id="@+id/subTitle"
         android:text="@string/sports_info_placeholder"
         android:padding="8dp"
-        style="@style/TextAppearance.AppCompat.Subhead" />
+        style="@style/SportsDetailText" />
 
 </RelativeLayout>
 </android.support.v7.widget.CardView>
