--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="SportsTitle" parent="TextAppearance.AppCompat.Headline"></style>
+    <style name="SportsDetailText" parent="TextAppearance.AppCompat.Subhead"></style>
+
 </resources>
